k8s/base/structs/reloader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reloader-reloader
    chart: reloader-v0.0.49
    group: com.stakater.platform
    heritage: Tiller
    provider: stakater
    release: reloader
    version: v0.0.49
  name: reloader-reloader
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: reloader-reloader
      release: reloader
  template:
    metadata:
      labels:
        app: reloader-reloader
        chart: reloader-v0.0.49
        group: com.stakater.platform
        heritage: Tiller
        provider: stakater
        release: reloader
        version: v0.0.49
    spec:
      containers:
      - args: null
        env: null
        image: stakater/reloader:v0.0.49
        imagePullPolicy: IfNotPresent
        name: reloader-reloader
      serviceAccountName: reloader-reloader
