k8s/base/structs/dex-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex-rbac
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex
    chart: dex-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex
  namespace: dex-rbac
spec:
  ports:
  - name: http
    port: 5556
    protocol: TCP
    targetPort: http
  selector:
    app: dex
    release: platform
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    scheduler.alpha.kubernetes.io/critical-pod: ""
  labels:
    app: dex
    chart: dex-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex
  namespace: dex-rbac
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: dex
      env: prod
      release: platform
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        checksum/config: fd466cf294068338b296b8dbc525c4fd53c4519d2a7f5f694027e91cb16a88cb
      labels:
        app: dex
        env: prod
        release: platform
    spec:
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/config.yaml
        env: null
        image: quay.io/dexidp/dex:v2.20.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5556
            scheme: HTTPS
        name: dex
        ports:
        - containerPort: 5556
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5556
            scheme: HTTPS
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/dex
          name: config
        - mountPath: /etc/dex/tls
          name: tls
      serviceAccountName: dex-auth-sa
      volumes:
      - configMap:
          items:
          - key: config.yaml
            path: config.yaml
          name: platform-dex
        name: config
      - name: tls
        secret:
          secretName: platform-dex-tls
