k8s/base/structs/dex-k8s-auth.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex-k8s-auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dex-k8s-authenticator
    chart: dex-k8s-authenticator-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex-k8s-authenticator
  namespace: dex-k8s-auth
spec:
  ports:
  - name: http
    port: 5555
    protocol: TCP
    targetPort: http
  selector:
    app: dex-k8s-authenticator
    release: platform
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex-k8s-authenticator
    chart: dex-k8s-authenticator-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex-k8s-authenticator
  namespace: dex-k8s-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-k8s-authenticator
      env: prod
      release: platform
  template:
    metadata:
      annotations:
        checksum/config: 2cefa0bcd1c6a5e646c2a62aa00bf0d32098b25b5d5fc77117cd17762b7e3d2d
      labels:
        app: dex-k8s-authenticator
        env: prod
        release: platform
    spec:
      containers:
      - args:
        - --config
        - config.yaml
        image: mintel/dex-k8s-authenticator:1.2.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        name: dex-k8s-authenticator
        ports:
        - containerPort: 5555
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /app/config.yaml
          name: config
          subPath: config.yaml
      volumes:
      - configMap:
          name: platform-dex-k8s-authenticator
        name: config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-external
  labels:
    app: dex-k8s-authenticator
    chart: dex-k8s-authenticator-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex-k8s-authenticator
  namespace: dex-k8s-auth
spec:
  rules:
  - host: login.fakebank.example.com
    http:
      paths:
      - backend:
          serviceName: platform-dex-k8s-authenticator
          servicePort: 5555
        path: /
  tls:
  - hosts:
    - login.fakebank.example.com
    secretName: cert-auth-login
